# DA

./: README.md  RealWorldGraph.h  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  teste.cpp  troco.java
Da_proj1/: CMakeLists.txt  City.h  Doxyfile  Parser  Parser.cpp  Parser.h  Pipe.h  Reservoir.h  Station.h  main  main.cpp  tasks.cpp
Da_proj1/data_structures/: Graph.h
Da_proj1/docs/html/: City_8h_source.html  Parser_8h_source.html  Pipe_8h_source.html  Reservoir_8h_source.html  Station_8h_source.html  annotated.html  classCity-members.html  classCity.html  classEdgeComparator-members.html  classEdgeComparator.html  classPipe-members.html  classPipe.html  classReservoir-members.html  classReservoir.html  classStation-members.html  classStation.html  classes.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  structFlowMetrics-members.html  structFlowMetrics.html
Da_proj1/docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  searchdata.js
Da_proj1/docs/latex/: annotated.tex  classCity.tex  classEdgeComparator.tex  classPipe.tex  classReservoir.tex  classStation.tex  refman.tex  structFlowMetrics.tex
da_proj2/: CMakeLists.txt  main.cpp
da_proj2/src/: DataParser.cpp  DataParser.h  RealWorldGraph.cpp  RealWorldGraph.h  ToyGraph.cpp  ToyGraph.h
proj2/: main  main.cpp  parser.cpp  tasks.cpp
